# sauce-man

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.bot  Pipfile  README.md  docker-compose.yaml  hello.py  pyproject.toml  requirements.txt
api/: README.md  database.py  pyproject.toml
architecture/: README.md
backend/: manage.py
backend/api/: config.py  database.py  main.py  models.py  routes.py
backend/bot/: client.py  commands.py  config.py  events.py  main.py  pyproject.toml
backend/core/: database.py  pyproject.toml  settings.py
bot/: Dockerfile.bot  README.md  docker-compose.yaml  pyproject.toml
bot/config/: config.py
bot/test/: example.yaml  test_os06.py  test_url_regex_01.py  test_url_regex_02.py
bot/url_regex/: __init__.py  handle_instagram_regex.py  url_regex.py
postgresql/: init-user-db.sh  postgresql.md
python/api/: main.py
scripts/: discord_bot_run.sh  docker_build.sh  docker_exec.sh  fastapi-dev.sh  generate_init.py  generate_vscode_settings.py  import_requirements.sh  load_requirements.sh  podman_tools.sh  poetry_tools.sh  ruff_utils.sh  start.sh  toml_tools.py  uv_tools.sh
src/: bot.py  example.yaml  main.py
src/api/: config.py  database.py  main.py  routes.py
src/bot/: client.py  commands.py  config.py  events.py
src/core/: settings.py
src/test/: bot.py  test_decorators01.py  test_discord_commands_re01.py
test/: bot.py  fastapi-discord-02.py  fastapi-discord.py  old_main.py  parse_twitter_01.py  test_backend_db_api01.py  test_datetime_utc01.py  test_decorators01.py  test_discord_commands_01.py  test_discord_commands_re01.py  test_os01.py  test_os02.py  test_os03.py  test_os04.py  test_os05.py  test_os06.py  test_os07.py  test_os08.py  test_os09.py  test_ptt_preview.py  test_sys01.py  test_sys02.py  test_token01.py  test_url_regex_01.py
v1/: README.md  pyproject.toml  requirements.txt
v1/api/: config.py  models.py
v1/api/test/: fastapi-discord-02.py
v1/bot/: .dockerignore  README.md  pyproject.toml  requirements.txt
v1/bot/config/: __init__.py
v1/bot/test/: parse_twitter_01.py  test_datetime_utc01.py  test_discord_commands_01.py
v1/bot/url_regex/: handle_twitter_regex.py  url_regex.py
(+10 files in other folders)
