[project]
name = "sauce-man"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.8.5",
    "aiosignal==1.3.1",
    "async-timeout==4.0.3",
    "attrs==23.1.0",
    "charset-normalizer==3.3.0",
    "discord-py==2.3.2",
    "frozenlist==1.4.0",
    "greenlet==2.0.2",
    "idna==3.4",
    "multidict==6.0.4",
    "numpy==1.26.0",
    "pandas==2.1.1",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "pyyaml==6.0.1",
    "six==1.16.0",
    "sqlalchemy==2.0.21",
    "typing-extensions==4.8.0",
    "tzdata==2023.3",
    "yarl==1.9.2",
]
