[project]
name = "sauce-man"
version = "0.1.0"
description = """* sauce-man is a discord bot to make discord app bertter to:
    * advanced search features for who want make some records or fix the broken preview from some outside URLs.
    * Fix Links Previews."""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "api",
    "bot",
]

[tool.uv.workspace]
members = ["bot", "api"]

[tool.uv.sources]
api = { workspace = true }
core = { workspace = true }
bot = { workspace = true }
